tests/snapshots/files__shared_snapshot_schedule_demo.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((left 11)
 (right 10))
