tests/snapshots/files__shared_snapshot_set.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((IS 1)
 (ISet-get 4))
