tests/snapshots/files__shared_snapshot_set_sort_function.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((bar 1)
 (baz 1)
 (quux 1)
 (qux 1))
