tests/snapshots/files__shared_snapshot_simple_proof_check.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(Fiat (= (Num 2) (Num 2)))
Num: 1
