tests/snapshots/files__shared_snapshot_stratified.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
edge: 4
edge: 4
path: 6
path: 6
