tests/snapshots/files__shared_snapshot_subsume.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(extraction-costs 11)
(extraction-costs 11)
((Add 2)
 (Mul 2)
 (Num 2)
 (Var 1))
