tests/snapshots/files__shared_snapshot_subsume_relation.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((A 1)
 (B 1)
 (C 1)
 (R 1))
