tests/snapshots/files__shared_snapshot_term_encoding_subsume_rebuild_bug.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Fn 1)
 (Init 1)
 (Init2 1)
 (matched 0))
