tests/snapshots/files__shared_snapshot_test_combined.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
edge: 4
edge: 4
path: 9
path: 9
