tests/snapshots/files__shared_snapshot_test_combined_steps.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
left: 11
left: 11
middle: 10
middle: 10
right: 11
right: 11
